# hassomepicklejuice.github.io

./: README.md  _config.yml  config.toml  hello-world.html  index.html
.github/workflows/: build-site.yml  static.yml
content/posts/: aoc-2023.md
docs/: dynamic-list.html  dynamic-list.js  hello-world.html  index.html
layouts/partials/: head.html
scripts/: app.js
src/: dynamic-list.html  hello-world.html  index.html  style.css
ssg/: Cargo.toml
ssg/src/: main.rs
styles/: main.css
templates/: article.hbs
